vcs/specs/parser/fail/generics/invalid_constraint_syntax.vr
// @test: parse-fail
// @level: L0
// @tags: parser, generics, constraint, error
// @description: Test invalid inline constraint with missing bound
// @expected-error: E050

fn foo<T: >() {
    let x: T;
}
